--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   http: ^0.13.5
   syncfusion_flutter_charts: ^20.4.44
   simple_icons: ^7.10.0
+  loading_animation_widget: ^1.2.0+4
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
