--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+.local-chromium/1083080/chrome-win/chrome.dll
+.local-chromium/1083080/chrome-win/interactive_ui_tests.exe
