--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0-151.0.dev <4.0.0'
+  sdk: '>=3.0.0-257.0.dev <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,11 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  http: ^0.13.5
-  syncfusion_flutter_charts: ^20.4.44
-  simple_icons: ^7.10.0
-  loading_animation_widget: ^1.2.0+4
-  provider: ^6.0.5
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
